Front - quando não há nenhuma conversa selecionada

--- a/whatsappclone/src/App.css
+++ b/whatsappclone/src/App.css
@@ -63,6 +63,18 @@ header{
   background-color: transparent;
   margin-left: 10px;
 }
+.chatlist{
+  flex: 1;
+  background-color: #FFF;
+  overflow-y: auto;
+}
+.chatlist::-webkit-scrollbar{
+  width: 6px;
+  height: 6px;
+}
+.chatlist::-webkit-scrollbar-thumb{
+  background-color: rgba(0,0,0,0.2);
+}
 .contentarea{
-  
+  flex: 1;
 }
