--- a/whatsappclone/src/components/ChatListItem.css
+++ b/whatsappclone/src/components/ChatListItem.css
@@ -4,6 +4,9 @@
   align-items: center;
   height: 70px;
 }
+.chatListItem:hover {
+ background-color: #F5F5F5;
+}
 .chatListItem--avatar{
   width: 50px;
   height: 50px;
