--- a/whatsappclone/src/components/ChatListItem.css
+++ b/whatsappclone/src/components/ChatListItem.css
@@ -7,6 +7,9 @@
 .chatListItem:hover {
  background-color: #F5F5F5;
 }
+.chatListItem.active{
+  background-color: #EBEBEB;
+}
 .chatListItem--avatar{
   width: 50px;
   height: 50px;
